@@ -44,24 +44,12 @@ import org.vrjuggler.jccl.config.*;
 
 
 /**
- * Simple factory-like helper class that centralizes the creation of the
- * data flavors that are needed for copy/paste and drag-and-drop support.
- */
-class DataFlavorFactory
-{
-   static DataFlavor makeConfigElementFlavor()
-   {
-      return new DataFlavor(ConfigElement.class, "VR Juggler Config Element");
-   }
-}
-
-/**
  * Wraps a ConfigElement to allow us to transfer it from on context to another
  * either using copy/past or drag and drop methods.
  */
 class ConfigElementSelection
+   extends TransferableConfigElement
    implements ClipboardOwner
-            , Transferable
 {
    /**
     * Constructor that takes the given ConfigElement and creates a Transferable
@@ -70,41 +58,7 @@ class ConfigElementSelection
     */
    public ConfigElementSelection(ConfigElement elm)
    {
-      mConfigElement = elm;
-   }
-
-   /**
-    * Return the ConfigElement that we are transfering.
-    */
-   public Object getTransferData(DataFlavor flavor)
-      throws UnsupportedFlavorException
-   {
-      if (flavor.getRepresentationClass().equals(ConfigElement.class))
-      {
-         return mConfigElement;
-      }
-      else
-      {
-         throw new UnsupportedFlavorException(flavor);
-      }
-   }
-
-   /**
-    * Return an array of valid DataFlavors that we can use to pass
-    * ConfigElements from one context to another context.
-    */
-   public DataFlavor[] getTransferDataFlavors()
-   {
-      return flavors;
-   }
-
-   /**
-    * Check if the given DataFlavor is a valid flavor for transfering
-    * ConfigElements from one context to another.
-    */
-   public boolean isDataFlavorSupported(DataFlavor flavor)
-   {
-      return flavor.getRepresentationClass().equals(ConfigElement.class);
+      super(elm);
    }
 
    /**
@@ -114,13 +68,6 @@ class ConfigElementSelection
    {
       ;
    }
-
-   /** ConfigElement that we are transfering. */
-   private ConfigElement mConfigElement = null;
-
-   /** Array of valid DataFlavors for transfering a ConfigElement. */
-   private DataFlavor[] flavors =
-      { DataFlavorFactory.makeConfigElementFlavor() };
 }
 
 /**
@@ -608,7 +555,8 @@ class ElementTree
             ConfigContextModel config_model = (ConfigContextModel)model;
 
             // Get the ConfigElement to paste out of the clipboard.
-            DataFlavor my_flavor = DataFlavorFactory.makeConfigElementFlavor();
+            DataFlavor my_flavor =
+               DataFlavorRepository.getConfigElementFlavor();
             Transferable tr = clipboard.getContents(this);
 
             // If this JTree has a valid JTreeModel and the incoming paste
@@ -718,7 +666,8 @@ class ElementTree
          TreeModel model = this.getModel();
          if(model instanceof ConfigContextModel)
          {
-            DataFlavor my_flavor = DataFlavorFactory.makeConfigElementFlavor();
+            DataFlavor my_flavor =
+               DataFlavorRepository.getConfigElementFlavor();
 
             try
             {
@@ -789,7 +738,7 @@ class ElementTree
       {
          TreeModel model = this.getModel();
          ConfigContextModel config_model = (ConfigContextModel)model;
-         DataFlavor my_flavor = DataFlavorFactory.makeConfigElementFlavor();
+         DataFlavor my_flavor = DataFlavorRepository.getConfigElementFlavor();
          Transferable tr = e.getTransferable();
 
          // If this JTree has a valid JTreeModel and the incoming drop supports
